Ajusted padding on small screens

--- a/docs/assets/styles.css
+++ b/docs/assets/styles.css
@@ -170,6 +170,12 @@ section {
         padding: 3rem;
     }
 }
+@media (max-width: 458px) {
+    .content-section {
+        padding: 3rem;
+    }
+}
+
 
 .closing-paragraph {
     margin-top: 2rem;
